qas-source/short-link/loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: backendmutosi-loadbalancer
  namespace: default
  labels:
    app: backendmutosi
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
    #service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:ap-southeast-1:829949757905:certificate/1a9b8917-92d1-4e41-9adb-c28eae6146a9
    #service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "https"
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
spec:
  type: LoadBalancer
  selector:
    app: backendmutosi
  ports:
    #- protocol: TCP
      #port: 80
  - name: http
    port: 80
  - name: https
    port: 443
