qas-source/short-link/nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: shortlinkmutosi-service
  namespace: default
spec:
  type: NodePort
  ports:
  - port: 80
    name: port80
    targetPort: 80
    protocol: TCP
    nodePort: 30699
  selector:
    app: shortlinkmutosi
